crates/cpg-schema/tests/snapshots/contracts__record_field_syntax.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table record_field_syntax
family syntax
key snapshot_id, class_node_id, name, fact_id
check span: start_byte >= 0 AND end_byte >= start_byte
@lctx.family=syntax
@lctx.table=record_field_syntax
snapshot_id: FixedSizeBinary(16) NOT NULL
fact_id: FixedSizeBinary(16) NOT NULL
field_node_id: FixedSizeBinary(16) NOT NULL
class_node_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
name: Utf8 NOT NULL
start_byte: Int64 NOT NULL
end_byte: Int64 NOT NULL
annotation_text: Utf8 NULL
value_text: Utf8 NULL
value_start_byte: Int64 NULL
value_end_byte: Int64 NULL
