crates/cpg-schema/tests/snapshots/contracts__return_completion_certificates.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table return_completion_certificates
family findings
key snapshot_id, certificate_id
check counts_nonnegative: entry_count >= 0 AND exit_count >= 0
@lctx.family=findings
@lctx.table=return_completion_certificates
snapshot_id: FixedSizeBinary(16) NOT NULL
certificate_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
return_site_fact_id: FixedSizeBinary(16) NOT NULL
entry_condition_id: FixedSizeBinary(16) NOT NULL
exit_condition_id: FixedSizeBinary(16) NOT NULL
entry_count: Int64 NOT NULL
exit_count: Int64 NOT NULL
entry_digest: FixedSizeBinary(32) NOT NULL
exit_digest: FixedSizeBinary(32) NOT NULL
