crates/cpg-schema/tests/snapshots/contracts__return_entry_statuses.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table return_entry_statuses
family findings
key snapshot_id, return_site_fact_id, condition_id
check positive_work: work > 0
@lctx.family=findings
@lctx.table=return_entry_statuses
snapshot_id: FixedSizeBinary(16) NOT NULL
return_site_fact_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
condition_id: FixedSizeBinary(16) NOT NULL
reason: Int16 NULL [lctx.codebook=boundary_reason]
work: Int64 NOT NULL
